[gd_scene load_steps=7 format=3 uid="uid://d1wcldr7w1kmp"]

[ext_resource type="Script" path="res://source/menus/intro.gd" id="1_imbbx"]
[ext_resource type="FontFile" uid="uid://dyhi86j3ru5rs" path="res://assets/fonts/vcr.ttf" id="2_yk6qt"]
[ext_resource type="VideoStream" path="res://assets/videos/scavmov is love.ogv" id="3_ji7ta"]
[ext_resource type="FontFile" uid="uid://crt41bnk7hw61" path="res://assets/fonts/tech.ttf" id="4_01uc1"]
[ext_resource type="PackedScene" uid="uid://bufodnhbl7i07" path="res://scenes/backend/overlay.tscn" id="5_n7i16"]
[ext_resource type="PackedScene" uid="uid://dpxmx3o7s44ok" path="res://scenes/backend/volume.tscn" id="6_v4tkw"]

[node name="intro" type="Node2D"]
script = ExtResource("1_imbbx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="bg" type="NinePatchRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="intro_text" type="Label" parent="bg"]
layout_mode = 0
offset_top = 320.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_fonts/font = ExtResource("2_yk6qt")
theme_override_font_sizes/font_size = 32
text = "Created by
Classic1926"
horizontal_alignment = 1

[node name="white" type="ColorRect" parent="bg"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="secretVideo" type="VideoStreamPlayer" parent="bg"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
stream = ExtResource("3_ji7ta")
expand = true

[node name="skipLabel" type="Label" parent="bg"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 408.0
offset_bottom = 64.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_01uc1")
theme_override_font_sizes/font_size = 28
text = "Hold ESC to skip"

[node name="overlayshit" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Overlay" parent="overlayshit" instance=ExtResource("5_n7i16")]

[node name="Volume" parent="overlayshit" instance=ExtResource("6_v4tkw")]
